improved debug and added logout
